Alteração no z-index das sections

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3311,6 +3311,7 @@
     }
     .sec_pad,.prototype_service_info{
         padding: 70px 0px;
+        z-index: -1;
     }
     .sec_title.mb_70{
         margin-bottom: 50px
